--- a/pom.xml
+++ b/pom.xml
@@ -10,18 +10,20 @@
     </parent>
     
     <groupId>com.example</groupId>
-    <artifactId>secure-blog</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
-    <name>secure-blog</name>
-    <description>Secure Blog Application for Lab 14</description>
+    <artifactId>blog-api</artifactId>
+    <version>1.0.0</version>
+    <name>blog-api</name>
+    <description>Secure Blog API with JWT Authentication</description>
     
     <properties>
         <java.version>17</java.version>
         <jwt.version>0.11.5</jwt.version>
+        <lombok.version>1.18.30</lombok.version>
+        <commons-lang3.version>3.14.0</commons-lang3.version>
     </properties>
     
     <dependencies>
-        <!-- Spring Boot Starters -->
+        <!-- Spring Boot Core -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
@@ -54,7 +56,7 @@
             <artifactId>flyway-core</artifactId>
         </dependency>
 
-        <!-- JWT -->
+        <!-- Security -->
         <dependency>
             <groupId>io.jsonwebtoken</groupId>
             <artifactId>jjwt-api</artifactId>
@@ -77,11 +79,13 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
+            <version>${lombok.version}</version>
             <optional>true</optional>
         </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
+            <version>${commons-lang3.version}</version>
         </dependency>
 
         <!-- Testing -->
@@ -109,6 +113,21 @@
                             <artifactId>lombok</artifactId>
                         </exclude>
                     </excludes>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
+                    <annotationProcessorPaths>
+                        <path>
+                            <groupId>org.projectlombok</groupId>
+                            <artifactId>lombok</artifactId>
+                            <version>${lombok.version}</version>
+                        </path>
+                    </annotationProcessorPaths>
                 </configuration>
             </plugin>
         </plugins>
